--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MDN Code Editor</title>
-    <link rel="stylesheet" href="./lib/css/editor-style.css" />
+    <link rel="stylesheet" href="/lib/css/editor-style.css" />
   </head>
   <body>
     <div class="editor">
@@ -26,11 +26,11 @@
       </div>
     </div>
     <!-- Requred ace libs -->
-    <script src="./lib/js/ace-editor/src-min/ace.js"></script>
-    <script src="./lib/js/ace-editor/src-min/mode-javascript.js"></script>
-    <script src="./lib/js/ace-editor/src-min/ext-language_tools.js"></script>
+    <script src="/lib/js/ace-editor/src-min/ace.js"></script>
+    <script src="/lib/js/ace-editor/src-min/mode-javascript.js"></script>
+    <script src="/lib/js/ace-editor/src-min/ext-language_tools.js"></script>
     <!-- Custom script -->
-    <script src="./lib/js/editor.js"></script>
-    <script src="./lib/js/editor-console.js"></script>
+    <script src="/lib/js/editor.js"></script>
+    <script src="/lib/js/editor-console.js"></script>
   </body>
 </html>
